intervalsets-macros/tests/ui/bad_bound_expr.rs
use intervalsets_macros::interval;

fn main() {
    // `let` is a keyword and not a valid expression here.
    let _ = interval!("[let, 10]");
}
